src/main/java/com/example/ncsproject/global/error/ErrorResponse.java
package com.example.ncsproject.global.error;public class ErrorResponse {
}
